--- a/.github/workflows/shreeniteam-springbootemplate-main-shree-branch-workflow.yml
+++ b/.github/workflows/shreeniteam-springbootemplate-main-shree-branch-workflow.yml
@@ -27,7 +27,7 @@ jobs:
           sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu  $(lsb_release -cs)  stable"
           sudo apt-get update
           VERSION_STRING=5:24.0.0-1~ubuntu.22.04~jammy
-          sudo apt-get install docker-ce=$VERSION_STRING docker-ce-cli=$VERSION_STRING containerd.io docker-buildx-plugin docker-compose-plugin
+          sudo apt-get --allow-downgrades install docker-ce=$VERSION_STRING docker-ce-cli=$VERSION_STRING containerd.io docker-buildx-plugin docker-compose-plugin
       - uses: actions/checkout@v3
         with:
           ref: ${{ env.BRANCH_NAME }}
