--- a/.github/workflows/shreeniteam-springbootemplate-main-shree-branch-workflow.yml
+++ b/.github/workflows/shreeniteam-springbootemplate-main-shree-branch-workflow.yml
@@ -14,6 +14,7 @@ env:
   ENVIRONMENT_NAME: shree
   BRANCH_NAME: main
   CLUSTER_NAME: architect
+  ARC_NO_CACHE: 1
 
 jobs:
   architect_create_branch_deployments:
@@ -28,7 +29,7 @@ jobs:
           curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
           sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu  $(lsb_release -cs)  stable"
           sudo apt-get update
-          VERSION_STRING=5:20.0.0-1~ubuntu.22.04~jammy
+          VERSION_STRING=5:20.10.14-1~ubuntu.22.04~jammy
           sudo apt-get --allow-downgrades install docker-ce=$VERSION_STRING docker-ce-cli=$VERSION_STRING containerd.io docker-buildx-plugin
           sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
           sudo chmod +x /usr/local/bin/docker-compose
