--- a/.github/workflows/shreeniteam-springbootemplate-main-shree-branch-workflow.yml
+++ b/.github/workflows/shreeniteam-springbootemplate-main-shree-branch-workflow.yml
@@ -22,22 +22,19 @@ jobs:
     steps:
       - name: Check Docker Version
         run: docker --version
-      - name: docker available version
-        run: apt-cache madison docker-ce | awk '{ print $3 }'
       - name: Install Latest Docker
         run: |
           curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
           sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu  $(lsb_release -cs)  stable"
           sudo apt-get update
-          VERSION_STRING=5:23.0.0-1~ubuntu.22.04~jammy
+          VERSION_STRING=5:21.0.0-1~ubuntu.22.04~jammy
           sudo apt-get remove docker-compose-plugin
           sudo apt-get remove docker-buildx-plugin
           sudo rm -f /usr/local/bin/docker-compose
           sudo apt-get --allow-downgrades install docker-ce=$VERSION_STRING docker-ce-cli=$VERSION_STRING containerd.io
           sudo apt-get --allow-downgrades install docker-compose-plugin=2.21.0-1~ubuntu.22.04~jammy
-          #sudo curl -L "https://github.com/docker/compose/releases/download/2.21.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+          sudo curl -L "https://github.com/docker/compose/releases/download/2.21.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
       - uses: actions/checkout@v3
         with:
           ref: ${{ env.BRANCH_NAME }}
