--- a/.github/workflows/shreeniteam-springbootemplate-main-shree-branch-workflow.yml
+++ b/.github/workflows/shreeniteam-springbootemplate-main-shree-branch-workflow.yml
@@ -30,6 +30,7 @@ jobs:
           VERSION_STRING=5:23.0.0-1~ubuntu.22.04~jammy
           sudo apt-get remove docker-compose-plugin
           sudo apt-get remove docker-buildx-plugin
+          sudo apt-cache madison docker-buildx-plugin
           sudo rm -f /usr/local/bin/docker-compose
           sudo apt-get --allow-downgrades install docker-ce=$VERSION_STRING docker-ce-cli=$VERSION_STRING containerd.io
           sudo apt-get --allow-downgrades install docker-compose-plugin=2.21.0-1~ubuntu.22.04~jammy
