--- a/.github/workflows/shreeniteam-springbootemplate-main-shree-branch-workflow.yml
+++ b/.github/workflows/shreeniteam-springbootemplate-main-shree-branch-workflow.yml
@@ -32,7 +32,7 @@ jobs:
           sudo apt-get remove docker-buildx-plugin
           sudo apt-cache madison docker-buildx-plugin
           sudo rm -f /usr/local/bin/docker-compose
-          sudo apt-get --allow-downgrades install docker-ce=$VERSION_STRING docker-ce-cli=$VERSION_STRING containerd.io
+          sudo apt-get --allow-downgrades install docker-ce=$VERSION_STRING docker-ce-cli=$VERSION_STRING containerd.io docker-buildx-plugin=0.10.2-1~ubuntu.22.04~jammy
           sudo apt-get --allow-downgrades install docker-compose-plugin=2.21.0-1~ubuntu.22.04~jammy
           sudo curl -L "https://github.com/docker/compose/releases/download/2.21.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
           sudo ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
