--- a/.github/workflows/shreeniteam-springbootemplate-main-shree-branch-workflow.yml
+++ b/.github/workflows/shreeniteam-springbootemplate-main-shree-branch-workflow.yml
@@ -50,7 +50,7 @@ jobs:
       - name: docker compose
         run: docker compose version
       - name: Register component w/ Architect
-        run: architect register ${{ env.COMPONENT_FILE_PATH }} -t latest
+        run: architect register ${{ env.COMPONENT_FILE_PATH }} -t v1
       - name: An environment created automatically by a GitHub branch workflow to facilitate automated component deployments
         run: architect environment:create --cluster=${{ env.CLUSTER_NAME }} --description="Architect workflow environment" ${{ env.ENVIRONMENT_NAME }}
       - name: Deploy component
